testsuite/c_test/enhancec_test/ENC0059-nonnull_check_call_err/nonnull_check_call_err.c
/*
 * Copyright (c) [2020-2021] Huawei Technologies Co.,Ltd.All rights reserved.
 *
 * OpenArkCompiler is licensed under Mulan PSL v2.
 * You can use this software according to the terms and conditions of the Mulan PSL v2.
 * You may obtain a copy of Mulan PSL v2 at:
 *
 *     http://license.coscl.org.cn/MulanPSL2
 *
 * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
 * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
 * FIT FOR A PARTICULAR PURPOSE.
 * See the Mulan PSL v2 for more details.
 */

#include <stdio.h>
int test(int *x, int *y) __attribute__((nonnull(2))) {
  return *y;
}

int main() {
  int *p = malloc(sizeof(int));
  int *q = NULL;
  test(p, q); // error: NULL passed to a callee that requires a nonnull argument
  return 0;
}
